# evap-modeling

./: .gitignore  app.py  main.py  pyproject.toml
notebooks/: refrigeration_prediction_and_optimization_using_RNN_and_RL.ipynb
src/: config.py
src/data/: loader.py
src/models/: compressor.py  evaporator.py  system.py
src/predictors/: base_predictor.py  decision_tree_predictor.py  lstm_predictor.py
