[project]
name = "evap-modeling"
version = "0.1.0"
description = ""
authors = [
    {name = "Vikas Chandan",email = "chandan.vikas@gmail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "pandas (>=2.2,<3)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "tensorflow (>=2.21.0,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "plotly (>=6.7.0,<7.0.0)",
    "optuna (>=4.8.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
